--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "babel-preset-react": "^6.24.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "redux-devtools-extension": "^2.13.8"
   },
   "scripts": {
     "start": "react-scripts start",
