--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
     "babel-loader": "^8.0.6",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "node-sass": "^4.13.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-redux": "^7.1.3",
     "react-scripts": "3.2.0",
-    "redux-devtools-extension": "^2.13.8"
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "sass": "^1.23.3",
+    "scss": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
