--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "babel-loader": "^8.0.6",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "cleave": "^1.0.0-alpha.10",
+    "cleave.js": "^1.5.3",
     "node-sass": "^4.13.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
