--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "babel-preset-react": "^6.24.1",
     "cleave": "^1.0.0-alpha.10",
     "cleave.js": "^1.5.3",
+    "enzyme-adapter-react-15": "^1.4.1",
+    "jest": "^24.9.0",
     "node-sass": "^4.13.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
@@ -39,5 +41,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
+    "react-test-renderer": "^15.6.2"
   }
 }
